森の完成判定を実装

--- a/todo.org
+++ b/todo.org
@@ -7,3 +7,11 @@ CLOSED: [2018-01-03 水 10:08]
 * DONE 仮パネルデータ作成
 CLOSED: [2018-01-03 水 10:08]
 * TODO 画面スクロール操作
+* TODO パネルが置けない状況への対応
+* TODO 勇者の実装
+* TODO 勇者が立ち寄る場所の実装
+* TODO クリア条件実装
+* TODO ラスボス登場の実装
+* TODO Cinderへの移植
+* TODO 効果音
+* TODO iOS移植
