DEBUGモードの追加とTODO更新

--- a/todo.org
+++ b/todo.org
@@ -3,15 +3,33 @@
 CLOSED: [2018-01-03 水 10:08]
 * DONE パネルの配置
 CLOSED: [2018-01-03 水 10:08]
-* TODO 地形完成チェック
+* DONE 地形完成チェック
+CLOSED: [2018-01-03 水 17:47]
 * DONE 仮パネルデータ作成
 CLOSED: [2018-01-03 水 10:08]
-* TODO 画面スクロール操作
 * TODO パネルが置けない状況への対応
-* TODO 勇者の実装
-* TODO 勇者が立ち寄る場所の実装
-* TODO クリア条件実装
-* TODO ラスボス登場の実装
+* TODO 試遊会向けのパネル製作
+* TODO 全パネルを置いた時への対応
 * TODO Cinderへの移植
 * TODO 効果音
 * TODO iOS移植
+* TODO 時間内にたくさんパネルを置いて地図の完成度を競う
+* TODO 森の広さ
+* TODO 平原の広さ
+* TODO 道の長さ
+* TODO 川の長さ
+* TODO 海の広さ
+* TODO 森の多さ
+* TODO 街の多さ
+* TODO 条件を満たすと特殊な地形が出現
+* ABORT 画面スクロール操作
+CLOSED: [2018-01-03 水 17:51]
+* ABORT 勇者の実装
+CLOSED: [2018-01-03 水 17:47]
+* ABORT 勇者が立ち寄る場所の実装
+CLOSED: [2018-01-03 水 17:47]
+* ABORT クリア条件実装
+CLOSED: [2018-01-03 水 17:47]
+* ABORT ラスボス登場の実装
+CLOSED: [2018-01-03 水 17:47]
+
