時間切れ実装

--- a/todo.org
+++ b/todo.org
@@ -22,6 +22,8 @@ CLOSED: [2018-01-03 水 10:08]
 * TODO 森の多さ
 * TODO 街の多さ
 * TODO 条件を満たすと特殊な地形が出現
+* TODO 得点を総合して評価する
+* TODO 時間切れとなった時に出来かけをカウントする
 * ABORT 画面スクロール操作
 CLOSED: [2018-01-03 水 17:51]
 * ABORT 勇者の実装
