ゲーム完了に森の数や街の数を計算するようにした

--- a/todo.org
+++ b/todo.org
@@ -8,22 +8,28 @@ CLOSED: [2018-01-03 水 17:47]
 * DONE 仮パネルデータ作成
 CLOSED: [2018-01-03 水 10:08]
 * TODO パネルが置けない状況への対応
+* TODO 得点計算時に同じ場所を省く
 * TODO 試遊会向けのパネル製作
 * TODO 全パネルを置いた時への対応
 * TODO Cinderへの移植
 * TODO 効果音
 * TODO iOS移植
 * TODO 時間内にたくさんパネルを置いて地図の完成度を競う
-* TODO 森の広さ
+* DONE 森の広さ
+CLOSED: [2018-01-03 水 19:31]
 * TODO 平原の広さ
-* TODO 道の長さ
+* DONE 道の長さ
+CLOSED: [2018-01-03 水 19:31]
 * TODO 川の長さ
 * TODO 海の広さ
-* TODO 森の多さ
-* TODO 街の多さ
+* DONE 森の多さ
+CLOSED: [2018-01-03 水 20:15]
+* DONE 街の多さ
+CLOSED: [2018-01-03 水 21:39]
 * TODO 条件を満たすと特殊な地形が出現
 * TODO 得点を総合して評価する
-* TODO 時間切れとなった時に出来かけをカウントする
+* ABORT 時間切れとなった時に出来かけをカウントする
+CLOSED: [2018-01-03 水 21:39]
 * ABORT 画面スクロール操作
 CLOSED: [2018-01-03 水 17:51]
 * ABORT 勇者の実装
