パネルを使い切ったらゲーム終了

--- a/todo.org
+++ b/todo.org
@@ -1,17 +1,20 @@
 
 * TODO パネルが置けない状況への対応
-* TODO 得点計算時に同じ場所を省く
 * TODO 試遊会向けのパネル製作
-* TODO 全パネルを置いた時への対応
 * TODO Cinderへの移植
 * TODO 効果音
 * TODO iOS移植
-* TODO 時間内にたくさんパネルを置いて地図の完成度を競う
 * TODO 平原の広さ
 * TODO 川の長さ
 * TODO 海の広さ
 * TODO 条件を満たすと特殊な地形が出現
 * TODO 得点を総合して評価する
+* DONE 全パネルを置いた時への対応
+CLOSED: [2018-01-03 水 22:07]
+* DONE 得点計算時に同じ場所を省く
+CLOSED: [2018-01-03 水 22:04]
+* DONE 時間内にたくさんパネルを置いて地図の完成度を競う
+CLOSED: [2018-01-03 水 22:03]
 * DONE パネルの表示
 CLOSED: [2018-01-03 水 10:08]
 * DONE パネルの配置
