教会の判定を追加

--- a/todo.org
+++ b/todo.org
@@ -1,14 +1,15 @@
 
-* TODO パネルが置けない状況への対応
 * TODO 試遊会向けのパネル製作
 * TODO Cinderへの移植
 * TODO 効果音
 * TODO iOS移植
-* TODO 平原の広さ
-* TODO 川の長さ
-* TODO 海の広さ
 * TODO 条件を満たすと特殊な地形が出現
 * TODO 得点を総合して評価する
+* TODO 深い森
+* DONE 教会
+CLOSED: [2018-01-04 木 00:32]
+* DONE パネルが置けない状況への対応
+CLOSED: [2018-01-03 水 22:52]
 * DONE 全パネルを置いた時への対応
 CLOSED: [2018-01-03 水 22:07]
 * DONE 得点計算時に同じ場所を省く
@@ -31,6 +32,12 @@ CLOSED: [2018-01-03 水 19:31]
 CLOSED: [2018-01-03 水 20:15]
 * DONE 街の多さ
 CLOSED: [2018-01-03 水 21:39]
+* ABORT 平原の広さ
+CLOSED: [2018-01-03 水 23:48]
+* ABORT 川の長さ
+CLOSED: [2018-01-03 水 22:52]
+* ABORT 海の広さ
+CLOSED: [2018-01-03 水 22:52]
 * ABORT 時間切れとなった時に出来かけをカウントする
 CLOSED: [2018-01-03 水 21:39]
 * ABORT 画面スクロール操作
