--- a/todo.org
+++ b/todo.org
@@ -1,11 +1,16 @@
 
 * TODO 試遊会向けのパネル製作
+* TODO タイトル決め
 * TODO Cinderへの移植
+* TODO 文字表示はstbで
+* TODO マウス対応
+* TODO マウスホイール対応
+* TODO マルチタッチ対応
 * TODO 効果音
-* TODO iOS移植
 * TODO 条件を満たすと特殊な地形が出現
 * TODO 得点を総合して評価する
-* TODO 深い森
+* DONE 深い森
+CLOSED: [2018-01-04 木 01:00]
 * DONE 教会
 CLOSED: [2018-01-04 木 00:32]
 * DONE パネルが置けない状況への対応
@@ -32,6 +37,8 @@ CLOSED: [2018-01-03 水 19:31]
 CLOSED: [2018-01-03 水 20:15]
 * DONE 街の多さ
 CLOSED: [2018-01-03 水 21:39]
+* ABORT iOS移植
+CLOSED: [2018-01-04 木 08:34]
 * ABORT 平原の広さ
 CLOSED: [2018-01-03 水 23:48]
 * ABORT 川の長さ
